# DARAM-G

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/: __init__.py  main.py  utility.py
src/DARAM-G_sim/: CMakeLists.txt  package.xml
src/autonomous_exploration/: package.xml  setup.py
src/daramg_2d_exploration/: README.md  package.xml  setup.cfg  setup.py
src/daramg_2d_exploration/launch/: autonomous_exploration.launch.py  rtab_map.launch.py  sim_rtabmap_bringup.launch.py  sim_slamtoolbox_bringup.launch.py
src/daramg_2d_exploration/rviz/: autonomous_exploration.rviz  rtabmap_bringup.rviz  slamtoolbox_nav2.rviz
src/daramg_3d_exploration/: README.md  package.xml  setup.cfg  setup.py
src/daramg_bringup/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
src/daramg_bringup/config/: daramg.yaml  simple_rover.yaml  slam_toolbox.yaml
src/daramg_bringup/daramg_bringup/: carto_control.py  line_detection.py  line_follower.py  line_following.py  object_collector.py  rtab_control.py
src/daramg_bringup/launch/: bringup.launch.py  exploration2d_rtabmap.launch.py  exploration2d_slamtoolbox.launch.py  exploration3d_rtabmap.launch.py  navigation.launch.py  rtabmap_lidar.launch.py  sim_navigation.launch.py  sim_rtabmap.launch.py  sim_rtabmap_bringup.launch.py  sim_rtabmap_camera.launch.py  sim_slamtoolbox_bringup.launch.py  slamtoolbox.launch.py  test.launch.py
src/daramg_bringup/rviz/: exploration2d.rviz
src/daramg_bringup/src/: 2dfsm.cpp  color_detection.py  line_detection.py  line_test.py  main.py  utility.py  yolo_test.py
src/daramg_control/: package.xml  setup.cfg  setup.py
src/daramg_exploration_3d/: CMakeLists.txt  package.xml
src/daramg_exploration_3d/scripts/: nav2_exploration.py
src/daramg_exploration_3d/src/: frontier_search.cpp
src/daramg_hw/: CMakeLists.txt  README.md  package.xml
src/daramg_hw/src/: pyserial_bridge_cmdvel.py
src/daramg_launchutils/: CMakeLists.txt  package.xml
src/daramg_launchutils/launch/: navigation.launch.py  slamtoolbox_bringup.launch.py
src/daramg_manipulator/: CMakeLists.txt  README.md  package.xml
src/daramg_manipulator/daramg_manipulator/: arm_control.py  yolo_nav2.py  yolo_node.py
src/daramg_msgs/: CMakeLists.txt  README.md  package.xml
src/daramg_msgs/msg/: Detection.msg  YoloDetection.msg
src/daramg_path/: package.xml  setup.cfg  setup.py
src/daramg_sim/: CMakeLists.txt  README.md  package.xml
src/daramg_sim/config/: MXswitch.config.yaml  amcl.yaml  cartographer.lua  controllers.yaml  localization.lua  simple_rover.yaml
src/daramg_sim/launch/: amcl.launch.py  cartographer.launch.py  navigation.launch.py  rtab_map.launch.py  rtabmap_scan.launch.py  slamtoolbox_nav2.launch.py  spawn_robot.launch.py  world.launch.py
src/daramg_sim/map/: turtlebot3_new_world.pgm  turtlebot3_new_world.yaml  warehouse.pgm  warehouse.yaml
src/daramg_sim/rviz/: sim.rviz
src/daramg_sim/urdf/: 2Dlidar.xacro  RGB_D.xacro  diff_drive.gazebo  forwardCam.xacro  imu.xacro  ramgbot.urdf  (+4 more)
src/daramg_sim_classic/: CMakeLists.txt  package.xml
src/daramg_sw/: package.xml  setup.cfg  setup.py
src/daramg_yolo/: CMakeLists.txt  README.md  package.xml
src/daramg_yolo/src/: color_detect.py  detect.py  object_collector.py  test.py  yolo_node.py
src/detection_msgs/: CMakeLists.txt  package.xml
src/frontier_exploration/: CMakeLists.txt  package.xml
src/frontier_msgs/: CMakeLists.txt  package.xml
src/frontier_msgs/msg/: FrontierInfo.msg  FrontierInfoArray.msg
src/rover_control/: package.xml  setup.py
(+71 files in other folders)
